--- a/DaemonKit/Settings.xaml
+++ b/DaemonKit/Settings.xaml
@@ -38,28 +38,28 @@
 
             <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0" FontSize="15" Text="{Binding DelayDaemon}" VerticalAlignment="Center" materialDesign:TextFieldAssist.SuffixText="ms" Cursor="IBeam">
                 <materialDesign:HintAssist.Hint>
-                    <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
-                        <TextBlock Text="延迟守护" />
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
+                        <TextBlock Text="延迟启动进程树" />
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
             </TextBox>
             <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0" FontSize="15" Text="{Binding DaemonInterval}" VerticalAlignment="Center" materialDesign:TextFieldAssist.SuffixText="ms" Cursor="IBeam">
                 <materialDesign:HintAssist.Hint>
-                    <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
-                        <TextBlock Text="守护间隔" />
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
+                        <TextBlock Text="进程守护间隔" />
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
             </TextBox>
             <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0" FontSize="15" Text="{Binding ErrorCount}" VerticalAlignment="Center" materialDesign:TextFieldAssist.SuffixText="次" Cursor="IBeam">
                 <materialDesign:HintAssist.Hint>
-                    <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
                         <TextBlock Text="无响应容忍度" />
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
             </TextBox>
             <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0" FontSize="15" Text="{Binding CrashWindows}" VerticalAlignment="Center" Cursor="IBeam">
                 <materialDesign:HintAssist.Hint>
-                    <StackPanel Orientation="Horizontal" Margin="-2 0 0 0">
+                    <StackPanel Orientation="Horizontal" Margin="0 0 0 0">
                         <TextBlock Text="Crash进程(多个进程以|隔开)" />
                     </StackPanel>
                 </materialDesign:HintAssist.Hint>
